<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        >
        <item android:id="@+id/nav_video"
            android:checkable="true"
            android:icon="@mipmap/icon_video"
            android:title="@string/video"/>

        <item android:id="@+id/nav_new"
            android:icon="@mipmap/icon_new"
            android:title="@string/zhihu_new"/>

        <item android:title="@string/setting">
            <menu >
                <item android:id="@+id/nav_about"
                    android:icon="@mipmap/icon_about"
                    android:title="@string/about"/>

                <item android:id="@+id/nav_share"
                    android:icon="@mipmap/icon_share"
                    android:title="@string/share"/>
            </menu>
        </item>

    </group>
</menu>